src/objects/ExternalSystem__c.object
<CustomObject>
    <fields>
        <fullName>ExternalSystemNotes__c</fullName>
        <label>External System Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <formula>OR(
    TEXT(Status__c) = &apos;Not Used&apos;,
    TEXT(Status__c) = &apos;Done&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInScope__c</fullName>
        <formula>OR(
    IsClosed__c = false,
    TEXT(Status__c) = &apos;Done&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is In Scope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLegacy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Legacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsThirdPartyTool__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Third Party Tool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MetadataStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UploadId__c</fullName>
        <description>A unique, external ID - you can use this to store any value you want for upserting records.</description>
        <externalId>true</externalId>
        <inlineHelpText>A unique, external ID - you can use this to store any value you want for upserting records.</inlineHelpText>
        <label>Upload ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Uuid__c</fullName>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>External System</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IsLegacy__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllInScope</fullName>
        <columns>NAME</columns>
        <columns>IsLegacy__c</columns>
        <columns>IsThirdPartyTool__c</columns>
        <columns>UploadId__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsInScope__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All In Scope</label>
    </listViews>
    <nameField>
        <label>External System</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>